@@ -1,8 +1,8 @@
-# We install it in includedir, that easier currently.  Some
-# day everybody should move into includedir/urbi.
+include $(top_srcdir)/build-aux/config-headers-prefixed.mk
 
 # Where we find them in this package.
 libport_srcdir = $(top_srcdir)/libport
+libport_builddir = $(top_builddir)/libport
 # Where we install them.
 libportdir = $(includedir)/libport
 
@@ -20,10 +20,12 @@ $(libport_srcdir)/ull-fixed-point.hh		\
 $(libport_srcdir)/ulong-fixed-point.hh		\
 $(libport_srcdir)/utime.hh
 
+nodist_libport_HEADERS = 			\
+$(libport_builddir)/libport-config.h
+
 libport_sources = 				\
 $(libport_srcdir)/ufloat.cc			\
 $(libport_srcdir)/uffloat.cc			\
 $(libport_srcdir)/ull-fixed-point.cc
 
 
-include $(top_srcdir)/build-aux/config-headers-prefixed.mk
